z-index fix

--- a/sdds-demo-page/src/app/demo-sidebar/demo-sidebar.component.scss
+++ b/sdds-demo-page/src/app/demo-sidebar/demo-sidebar.component.scss
@@ -1,5 +1,6 @@
 :host {
     min-height: 100vh;
+    z-index: 10;
 
     .sdds-sidebar.side-menu {
         height: 100%;
